# rh-pulze-azure

./: .Dockerignore  .dockerignore  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example
backend/app/: main.py
backend/app/data/: cleaned_jobs.csv  dataset_with_skills.csv
backend/app/db/: database.py  dependencies.py
backend/app/loggins/: backend_logs_config.py  ml_logs_config.py
backend/app/ml/: training_pipeline.py
backend/app/ml/Nootbook/: eda.ipynb  training.ipynb
backend/app/ml/data_processing/: embedding.py  encoding.py  normalisation.py  processing.py  training_pipeline.py
backend/app/models/: jobs.py  skills.py  user.py
backend/app/routes/: extract-skills.py  extract_skills.py  health.py  jobs.py  login.py  predict.py  register.py
backend/app/saved_model/: rf_model.pkl
backend/app/schemas/: job_schema.py  user_schema.py
backend/app/services/: authService.py  azure_service.py  extract_skills_service.py  jobService.py  predict.py
backend/tests/: test_predict.py
data/embedding_db/: chroma.sqlite3
infra/docker/: Dockerfile  backend.Dockerfile  docker-compose.yml  mlflow.Dockerfile
terraform/: main.tf
