[project]
name = "rh-pulze-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "azure-ai-textanalytics>=5.3.0",
    "chromadb>=1.5.1",
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0,<1.0.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "nltk>=3.9.3",
    "numpy>=2.2.6",
    "onnxruntime<1.24",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pluggy>=1.6.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pyodbc>=5.3.0",
    "pypdf>=6.7.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=12.4.4,<14",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.47",
    "sqlalchemy-utils>=0.42.1",
    "transformers<5.0.0",
    "uvicorn>=0.41.0",
]
